Basic viewer functionality and npm package
commit e44920c25fbe1dc6e514186254ae61c34a171e99
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Fri Mar 5 00:17:23 2021 +0000

    add dist

commit 949055f667407321cfb0879e662ce7e199c85779
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Fri Mar 5 00:06:44 2021 +0000

    remove lfs

commit e3c166df183d4ab17abefdb4d56efdcb4b49662e
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Fri Mar 5 00:04:50 2021 +0000

    License and readme

commit abab04612bf6a9d30940a5e94534607d8666928c
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Thu Mar 4 23:29:42 2021 +0000

    support externals through importmap shim

commit 037bc03ed7a5700adc975a38b7cf8388a64820a0
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Thu Mar 4 20:48:21 2021 +0000

    update package

commit f1061d0fd7c956ced7cf4f51b0d94d38a0e90a95
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Wed Mar 3 00:01:54 2021 +0000

    use rollup

commit 2ab8cf097b3e87e28df830b232e335dc2f948b1d
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Sun Feb 28 22:10:22 2021 +0000

    package update

commit 030c235a56100ba2502c9e6e50b224986c21cc74
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Sun Feb 28 22:09:52 2021 +0000

    WIP move to lib style

commit 4583e974f6c250bc3c3f656a0461d92a9bcb1b49
Author: Michael Nisbet <mike@envoke-demos.com>
Date:   Sun Feb 28 13:49:02 2021 +0000

    move general page styling

commit 769d43bec69f92b3c2e3d5ecd359794d0cca51ee
Author: Mike Nisbet <nisbet.mr@gmail.com>
Date:   Sat Jan 16 16:48:42 2021 +0000

    ability to load a poly tilt brush link

commit fb02470c6825f01309b6fd0082983f926754a72d
Author: Mike Nisbet <nisbet.mr@gmail.com>
Date:   Sat Jan 16 00:23:33 2021 +0000

    load via Icosa API's Poly bridge

commit 7b5c9bb27d465e0dccf33aa67e85e4c933d31e09
Author: Mike Nisbet <nisbet.mr@gmail.com>
Date:   Sat Jan 2 02:35:27 2021 +0000

    basic VR support

commit 9feebc0e3f063ba6968f708d7f727c5b7f

--- a/package.json
+++ b/package.json
@@ -1,38 +1,57 @@
 {
-  "name": "icosa",
-  "version": "1.0.0",
-  "description": "Replacement for Poly",
-  "private": true,
+  "name": "icosa-viewer",
+  "version": "0.1.1",
+  "description": "Viewer for Tilt Brush / Open Brush files and derivatives",
   "scripts": {
-    "build": "webpack",
+    "dev": "rollup --config --watch",
+    "build": "rollup --config && terser dist/icosa-viewer.js -o dist/icosa-viewer.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mikeskydev/icosa.git"
+    "url": "git+https://github.com/icosa-gallery/icosa-viewer.git"
   },
-  "author": "MikeskyDev",
-  "license": "UNLICENCED",
+  "author": "Icosa Gallery",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/mikeskydev/icosa/issues"
+    "url": "https://github.com/icosa-gallery/icosa-viewer/issues"
   },
-  "homepage": "https://github.com/mikeskydev/icosa#readme",
+  "homepage": "https://github.com/icosa-gallery/icosa-viewer#readme",
   "devDependencies": {
-    "@types/three": "^0.103.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^5.0.1",
-    "remove-files-webpack-plugin": "^1.4.4",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0"
+    "@types/dat.gui": "^0.7.6",
+    "@types/three": "^0.125.3",
+    "node-sass": "^5.0.0",
+    "postcss": "^8.2.6",
+    "rollup": "^2.40.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "terser": "^5.6.0",
+    "typescript": "^4.1.3"
+  },
+  "peerDependencies": {
+    "three": "^0.125.0",
+    "camera-controls": "^1.25.3",
+    "hold-event": "0.0.1"
   },
   "dependencies": {
-    "camera-controls": "^1.25.2",
-    "three": "^0.123.0"
-  }
+    "camera-controls": "^1.25.3",
+    "hold-event": "0.0.1",
+    "three": "^0.125.0"
+  },
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/icosa"
+  },
+  "keywords": [
+    "three",
+    "three.js",
+    "viewer",
+    "openbrush",
+    "tiltbrush",
+    "creative",
+    "camera",
+    "vr",
+    "xr"
+  ]
 }
