--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "camera-controls": "^1.25.3",
     "hold-event": "0.0.1",
+    "rollup-plugin-glslify": "^1.2.0",
     "three": "^0.125.0"
   },
   "funding": {
