--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/three": "^0.125.3",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
+    "postcss-url": "^10.1.3",
     "rollup": "^2.40.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
