--- a/package.json
+++ b/package.json
@@ -20,29 +20,34 @@
   },
   "homepage": "https://github.com/icosa-gallery/icosa-viewer#readme",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@types/dat.gui": "^0.7.6",
     "@types/three": "^0.125.3",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
     "postcss-url": "^10.1.3",
     "rollup": "^2.40.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-glslify": "^1.2.0",
     "terser": "^5.6.0",
     "typescript": "^4.1.3"
   },
-  "peerDependencies": {
+  "dependencies": {
     "three": "^0.125.0",
     "camera-controls": "^1.25.3",
     "hold-event": "0.0.1"
   },
-  "dependencies": {
-    "camera-controls": "^1.25.3",
-    "hold-event": "0.0.1",
-    "rollup-plugin-glslify": "^1.2.0",
-    "three": "^0.125.0"
-  },
+  "files": [
+    "dist/icosa-viewer.js",
+    "dist/icosa-viewer.min.js",
+    "dsit/icosa-viewer.module.js",
+    "examples",
+    "LICENSE",
+    "package.json",
+    "README.md",
+    "src"
+  ],
   "funding": {
     "type": "opencollective",
     "url": "https://opencollective.com/icosa"
