--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "three": "^0.125.0",
-    "camera-controls": "^1.25.3",
-    "hold-event": "0.0.1"
+    "camera-controls": "git+https://github.com/mikeskydev/camera-controls.git#no-install",
+    "hold-event": "0.0.1",
+    "three": "^0.125.0"
   },
   "files": [
     "dist/icosa-viewer.js",
