use test version of three-tiltloader

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "camera-controls": "git+https://github.com/mikeskydev/camera-controls.git#no-install",
     "hold-event": "0.0.1",
-    "three": "^0.128.0"
+    "three": "^0.128.0",
+    "three-tiltloader": "git+https://github.com/icosa-gallery/three-tiltloader.git#feature/alternate-loaders"
   },
   "files": [
     "dist/icosa-viewer.js",
