Use three-tiltloader

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "camera-controls": "git+https://github.com/mikeskydev/camera-controls.git#no-install",
     "hold-event": "0.0.1",
     "three": "^0.128.0",
-    "three-tiltloader": "git+https://github.com/icosa-gallery/three-tiltloader.git#feature/alternate-loaders"
+    "three-tiltloader": "^0.2.2"
   },
   "files": [
     "dist/icosa-viewer.js",
