Use three-tiltloader (#12)
* use test version of three-tiltloader

* Use three-tiltloader

* remove test files

* package updates

* consolidate viewer class

* stop ts warning

* improve update loop

* function rename

* tidyup

* remove dependency on custom cameracontrols

* Prep for PR

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "baseUrl": "src",
     "outDir": "./dist",
-    "target": "es5",
+    "target": "es6",
     "strict": true,
     "removeComments": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
