--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "icosa-viewer",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "description": "Viewer for Tilt Brush / Open Brush files and derivatives",
   "scripts": {
     "dev": "rollup --config --watch",
@@ -23,19 +23,20 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@types/dat.gui": "^0.7.6",
     "@types/three": "^0.125.3",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.0",
     "postcss-url": "^10.1.3",
     "rollup": "^2.40.0",
-    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
     "terser": "^5.6.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "camera-controls": "git+https://github.com/mikeskydev/camera-controls.git#no-install",
+    "camera-controls": "^1.33.1",
     "hold-event": "0.0.1",
-    "three": "^0.128.0"
+    "three": "^0.128.0",
+    "three-tiltloader": "^0.2.2"
   },
   "files": [
     "dist/icosa-viewer.js",
