--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "icosa-viewer",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Viewer for Tilt Brush / Open Brush files and derivatives",
   "scripts": {
     "dev": "rollup --config --watch",
@@ -15,14 +15,13 @@
   "license": "Apache-2.0",
   "main": "dist/icosa-viewer.js",
   "module": "dist/icosa-viewer.module.js",
+  "types": "dist/icosa-viewer.d.ts",
   "bugs": {
     "url": "https://github.com/icosa-gallery/icosa-viewer/issues"
   },
   "homepage": "https://github.com/icosa-gallery/icosa-viewer#readme",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@types/dat.gui": "^0.7.6",
-    "@types/three": "^0.125.3",
+    "@types/three": "^0.139.0",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.0",
     "postcss-url": "^10.1.3",
@@ -33,21 +32,17 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "camera-controls": "^1.33.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "camera-controls": "^1.34.2",
     "hold-event": "0.0.1",
+    "rollup-plugin-dts": "^4.2.1",
     "three": "^0.128.0",
-    "three-icosa": "github:icosa-gallery/three-icosa#main",
-    "three-tiltloader": "^0.2.2"
+    "three-icosa": "^0.3.6",
+    "three-tiltloader": "^0.4.0"
   },
   "files": [
-    "dist/icosa-viewer.js",
-    "dist/icosa-viewer.min.js",
-    "dist/icosa-viewer.module.js",
-    "examples",
-    "LICENSE",
-    "package.json",
-    "README.md",
-    "src"
+    "dist",
+    "examples"
   ],
   "funding": {
     "type": "opencollective",
