--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "homepage": "https://github.com/icosa-gallery/icosa-viewer#readme",
   "devDependencies": {
     "@types/three": "^0.139.0",
-    "node-sass": "^6.0.1",
     "postcss": "^8.3.0",
     "postcss-url": "^10.1.3",
     "rollup": "^2.40.0",
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
+    "sass": "^1.69.5",
     "terser": "^5.6.0",
     "typescript": "^4.1.3"
   },
