--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Viewer for Tilt Brush / Open Brush files and derivatives",
   "scripts": {
     "dev": "rollup --config --watch",
-    "build": "rollup --config && terser dist/icosa-viewer.js -o dist/icosa-viewer.min.js",
+    "build": "tsc --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,8 +25,8 @@
     "postcss": "^8.3.0",
     "postcss-url": "^10.1.3",
     "rollup": "^2.40.0",
-    "rollup-plugin-postcss": "^4.0.1",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.31.0",
     "sass": "^1.69.5",
     "terser": "^5.6.0",
     "typescript": "^4.1.3"
