--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "icosa-viewer",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "Viewer for Tilt Brush / Open Brush files and derivatives",
   "scripts": {
-    "dev": "rollup --config --watch",
-    "build": "tsc --build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cp:threeicosa": "ncp node_modules/three-icosa/dist/three-icosa.module.js dist/lib/three-icosa.module.js",
+    "cp:tiltloader": "ncp node_modules/three-tiltloader/dist/three-tiltloader.module.js dist/lib/three-tiltloader.module.js",
+    "cp:cameracontrols": "ncp node_modules/camera-controls/dist/camera-controls.module.js dist/lib/camera-controls.module.js",
+    "cp:holdevent": "ncp node_modules/hold-event/dist/hold-event.module.js dist/lib/hold-event.module.js",
+    "copy": "npm run cp:threeicosa & npm run cp:tiltloader & npm run cp:cameracontrols & npm run cp:holdevent",
+    "build": "tsc --build & npm run copy"
   },
   "repository": {
     "type": "git",
@@ -13,7 +16,7 @@
   },
   "author": "Icosa Gallery",
   "license": "Apache-2.0",
-  "main": "dist/icosa-viewer.js",
+  "main": "dist/Viewer.js",
   "module": "dist/icosa-viewer.module.js",
   "types": "dist/icosa-viewer.d.ts",
   "bugs": {
@@ -22,20 +25,12 @@
   "homepage": "https://github.com/icosa-gallery/icosa-viewer#readme",
   "devDependencies": {
     "@types/three": "^0.139.0",
-    "postcss": "^8.3.0",
-    "postcss-url": "^10.1.3",
-    "rollup": "^2.40.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.31.0",
-    "sass": "^1.69.5",
-    "terser": "^5.6.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "ncp": "^2.0.0"
   },
   "dependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
     "camera-controls": "^1.34.2",
     "hold-event": "0.0.1",
-    "rollup-plugin-dts": "^4.2.1",
     "three": "^0.139.2",
     "three-icosa": "^0.4.0",
     "three-tiltloader": "^0.4.1"
