Revert "Add immersive controls package"
This reverts commit f5bbba7ed561b85a4bb77ece2c8dbe14b509c873.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "types": "./dist/icosa-viewer.d.ts",
   "targets": {
     "module": {
-      "includeNodeModules": {}
+      "includeNodeModules": [
+        "three",
+        "@depasquale/three-immersive-controls",
+        "camera-controls",
+        "three-icosa",
+        "hold-event"
+      ]
     }
   },
   "bugs": {
