--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@depasquale/three-immersive-controls",
         "camera-controls",
         "three-icosa",
+        "three-tiltloader",
         "hold-event"
       ]
     }
@@ -42,7 +43,8 @@
     "@depasquale/three-immersive-controls": "^0.0.15",
     "camera-controls": "^2.8.4",
     "hold-event": "0.0.1",
-    "three-icosa": "^0.4.2-alpha.6"
+    "three-icosa": "^0.4.2-alpha.6",
+    "three-tiltloader": "^0.4.2-alpha.4"
   },
   "peerDependencies": {
     "three": ">=0.139.0"
