--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "devDependencies": {
     "@parcel/packager-ts": "^2.12.0",
     "@parcel/transformer-typescript-types": "^2.12.0",
-    "@types/three": "^0.164.1",
-    "parcel": "latest",
+    "@types/three": "^0.168",
+    "parcel": "^2.12.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
@@ -47,7 +47,7 @@
     "three-tiltloader": "^0.4.2-alpha.4"
   },
   "peerDependencies": {
-    "three": ">=0.139.0"
+    "three": ">=0.168"
   },
   "files": [
     "dist",
