--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@depasquale/three-immersive-controls": "^0.0.15",
     "camera-controls": "^2.8.4",
     "hold-event": "0.0.1",
-    "three-icosa": "^0.4.2-alpha.14",
+    "three-icosa": "^0.4.2-alpha.16",
     "three-tiltloader": "^0.4.2-alpha.4"
   },
   "peerDependencies": {
-    "three": ">=0.168"
+    "three": ">=0.165 <0.166.0"
   },
   "files": [
     "dist",
