--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "parcel watch",
     "build": "parcel build --no-cache",
-    "build:local": "parcel build --no-cache && cp \"../three-icosa-main/dist/three-icosa.module.js\" \"dist/three-icosa.module.js\"",
+    "build:local": "parcel build --no-cache && shx cp \"../three-icosa-main/dist/three-icosa.module.js\" \"dist/three-icosa.module.js\"",
     "download-three-icosa": "curl -o dist/three-icosa.module.js https://cdn.jsdelivr.net/npm/three-icosa@0.4.2-alpha.18/dist/three-icosa.module.js",
     "setup-cdn": "node scripts/setup-cdn-importmap.js",
     "test": "node npm-test.js"
@@ -40,7 +40,8 @@
     "@parcel/transformer-typescript-types": "^2.12.0",
     "@types/three": "^0.168",
     "parcel": "^2.12.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "shx": "^0.3.4"
   },
   "dependencies": {
     "@depasquale/three-immersive-controls": "^0.0.15",
