--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@depasquale/three-immersive-controls": "^0.0.15",
+    "@sparkjsdev/spark": "^0.1.8",
     "camera-controls": "^2.8.4",
     "hold-event": "0.0.1",
     "three-icosa": "^0.4.2-alpha.18",
